--- a/fixtures.html
+++ b/fixtures.html
@@ -66,7 +66,7 @@
                                     <tr>
                                         <td>6/11</td>
                                         <th></th>
-                                        <td><a href="man_city.html">Man city</a></td>
+                                        <td><a href="man_city.html">Man City</a></td>
                                         <td><img src="team_logo.png" alt=""></td>
                                         <td> 1 - 0 </td>
                                         <td><img src="team_logo.png" alt=""></td>
@@ -74,33 +74,33 @@
                                         <th></th>
                                     </tr>
                                     <tr>
-                                        <td>6/11</td>
+                                        <td>6/8</td>
                                         <th></th>
-                                        <td><a href="man_city.html">Man city</a></td>
+                                        <td><a href="fiorentina.html">Fiorentina</a></td>
                                         <td><img src="team_logo.png" alt=""></td>
                                         <td> 1 - 0 </td>
                                         <td><img src="team_logo.png" alt=""></td>
-                                        <td><a href="inter.html">Inter</a></td>
+                                        <td><a href="westham.html">West Ham</a></td>
                                         <th></th>
                                     </tr>
                                     <tr>
-                                        <td>6/11</td>
+                                        <td>6/3</td>
                                         <th></th>
-                                        <td><a href="man_city.html">Man city</a></td>
+                                        <td><a href="man_city.html">Man City</a></td>
                                         <td><img src="team_logo.png" alt=""></td>
-                                        <td> 1 - 0 </td>
+                                        <td> 2 - 1 </td>
                                         <td><img src="team_logo.png" alt=""></td>
-                                        <td><a href="inter.html">Inter</a></td>
+                                        <td><a href="man_utd.html">Man Utd</a></td>
                                         <th></th>
                                     </tr>
                                     <tr>
-                                        <td>6/11</td>
+                                        <td>6/1</td>
                                         <th></th>
-                                        <td><a href="man_city.html">Man city</a></td>
+                                        <td><a href="sevilla.html">Sevilla</a></td>
                                         <td><img src="team_logo.png" alt=""></td>
-                                        <td> 1 - 0 </td>
+                                        <td> 1 - 1 </td>
                                         <td><img src="team_logo.png" alt=""></td>
-                                        <td><a href="inter.html">Inter</a></td>
+                                        <td><a href="Roma.html">Roma</a></td>
                                         <th></th>
                                     </tr>
                                 </tbody>
