--- a/videos.html
+++ b/videos.html
@@ -20,9 +20,10 @@
 
     <body class="d-flex flex-column h-100">
         <main class="flex-shrink-0">
-            <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
-                <div class="container px-5">
-                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Footflix</span></a>
+            <!-- Navigation-->
+            <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white py-2">
+                <div class="container px-5 ">
+                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary fs-1">Footflix</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
@@ -41,13 +42,13 @@
                 </div>
             </nav>
         </main>
-        <div class="container-fluid py-5 px-5">
+        <div class="container-fluid py-5 px-5 mt-5">
             <div class="row">
                 <div class="col-lg-3 my-lg-auto">
                     <!-- 왼쪽 영상 -->
                     <h3 class="text-secondary mb-0 mt-2">추천 영상</p>
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" width="350", height="250" src="https://www.youtube.com/embed/kFX5wgjvRR0"></iframe>
+                        <iframe class="embed-responsive-item" width="350", height="250" src="https://www.youtube.com/embed/qD85oakw_vM"></iframe>
                     </div>
                     <p class="text-secondary mb-0 mt-3">맨시티의 트레블 달성 순간을 감상해보세요!</p>
                 </div>
@@ -57,42 +58,42 @@
                             <!-- 오른쪽 상단 영상 -->
                             <p class="mt-2">인기 영상</p>
                             <div class="embed-responsive embed-responsive-16by9">
-                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/VIDEO_ID"></iframe>
+                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/8r0zfdp646g"></iframe>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <!-- 오른쪽 상단 영상 -->
                             <p class="mt-2">인기 영상</p>
                             <div class="embed-responsive embed-responsive-16by9">
-                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/VIDEO_ID"></iframe>
+                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/d8p3gUN0Nd4"></iframe>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <!-- 오른쪽 상단 영상 -->
                             <p class="mt-2">인기 영상</p>
                             <div class="embed-responsive embed-responsive-16by9">
-                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/VIDEO_ID"></iframe>
+                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/oOd-EvDoGxY"></iframe>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <!-- 오른쪽 하단 영상 -->
                             <p class="mt-2">인기 영상</p>
                             <div class="embed-responsive embed-responsive-16by9">
-                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/VIDEO_ID"></iframe>
+                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1YglkcbjjpU"></iframe>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <!-- 오른쪽 하단 영상 -->
                             <p class="mt-2">인기 영상</p>
                             <div class="embed-responsive embed-responsive-16by9">
-                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/VIDEO_ID"></iframe>
+                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/w2jinTrnYOM"></iframe>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <!-- 오른쪽 하단 영상 -->
                             <p class="mt-2">인기 영상</p>
                             <div class="embed-responsive embed-responsive-16by9">
-                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/VIDEO_ID"></iframe>
+                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/q69mP7xGMd8"></iframe>
                             </div>
                         </div>
                     </div>
